--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 html{
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 
@@ -9,12 +10,7 @@ body {
 
 .heading1{
   text-align: center;
-  font-family: Dancing Script;
-  color: white;
-}
-
-.para1{
-  color: white;
+  font-family: Dancing Script
 }
 
 #preloader {
@@ -46,13 +42,13 @@ body {
     width: 100%;
     height: 89vh;
   }
-
+  
   .bgimg {
     position: relative;
     width: 100%;
     height: 89vh;
   }
-
+  
   /*.shade {
     width: 100%;
     height: 89vh;
@@ -62,7 +58,7 @@ body {
     background: rgba(0,0,0, 0.6);
     position: absolute;
   }*/
-
+  
   .context {
     text-align: left;
     color: white;
@@ -379,11 +375,11 @@ footer>.container>.container>.row {
 }
 
 .icon {
-    color: powderblue;
+    color: #ff4c68;
     margin-bottom: 1rem;
     margin-right: 20px;
 }
 
 .icon:hover {
-    color: #0CCCCC;
+    color: #ef8172;
 }
