--- a/causes.css
+++ b/causes.css
@@ -98,6 +98,17 @@ video {
   border: black;
 }
 
+#button1>a{
+  color: #000;
+  text-decoration: none;
+}
+
+#button1>a:active{
+  color: #000;
+  
+}
+
+
 /*Causes section */
 
 .section-heading {
@@ -272,3 +283,26 @@ footer > .container > .container > .row {
 }
 
 /*footer ends here*/
+
+
+/*Cards*/
+
+.thankyou-card{
+  margin-top: 150px;
+}
+
+.thank{
+left: 80px;
+}
+
+.container-2{
+  height: 100%;
+  width: 400px;
+  margin: 30px;
+  padding: 30px;
+}
+
+.donate-kind{
+  border-radius: 5%;
+  height: 300px;
+}
