--- a/contact.css
+++ b/contact.css
@@ -6,6 +6,7 @@ html{
 
 #contact{
   padding-top: 80px;
+  z-index: 200;
 }
 
 .heading2{
@@ -43,6 +44,7 @@ html{
     margin: 10px 0;
     display: flex;
     line-height: -1.0;
+    z-index: 300;
 }
 
 .social-media p {
